# assing-in-out

./: .gitignore  CMakeLists.txt  README.md
src/async_client/: CMakeLists.txt  Interface.h  blocking_tcp_echo_client.h  main.cpp
src/async_client/src/: Interface.cpp  blocking_tcp_echo_client.cpp  main.cpp  main_client.cpp
src/async_server/: CMakeLists.txt  InterfaceServer.h  ServerMessages.h  async_tcp_echo_server.h  main.cpp
src/async_server/src/: InterfaceServer.cpp  ServerMessages.cpp  async_tcp_echo_server.cpp  main.cpp  main_server.cpp
src/client/: CMakeLists.txt  blocking_tcp_echo_client.h
src/client/src/: Interface.cpp  blocking_tcp_echo_client.cpp  main_client.cpp
src/devices/: CMakeLists.txt  DeviceClient.h  DeviceServer.h  InterfaceDeviceClient.h
src/devices/src/: DeviceClient.cpp  DeviceServer.cpp  InterfaceDeviceClient.cpp  main.cpp
src/main/: CMakeLists.txt  MainInterface.h
src/main/src/: MainInterface.cpp  main.cpp
src/parallel_executor/: CMakeLists.txt  Device.h  DeviceClient.h  ParallelClientExecutor.h  ParallelclientExecutor.h
src/parallel_executor/src/: DeviceClient.cpp  EventQueue.cpp  ParallelClientExecutor.cpp  ParallelclientExecutor.cpp  Parser.cpp  main.cpp
src/protobuf/: CMakeLists.txt  DelimitedMessagesStreamParser.h  Parser.h
src/protobuf/parser/: CMakeLists.txt  DelimitedMessagesStreamParser.h  InterfaceProtobufMessage.h  Parser.h
src/protobuf/parser/src/: DelimitedMessagesStreamParser.cpp  InterfaceProtobufMessage.cpp  main.cpp
src/protobuf/protobuf/: CMakeLists.txt  message.proto
src/protobuf/src/: DelimitedMessagesStreamParser.cpp
test/: CMakeLists.txt  Test_blocking_tcp_echo_client.cpp
test/Test_client/: Test_blocking_tcp_echo_client.cpp
test/Test_devices/: Test_DeviceClient.cpp
test/Test_message/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_InterfaceProtobufMessage.cpp  Test_Parser.cpp
test/Test_parallel/: Test_DeviceClient.cpp
test/Test_server/: Test_ServerMessages.cpp  Test_async_tcp_echo_server.cpp
test/test_client/: test_blocking_tcp_echo_client.cpp
test/test_server/: test_async_tcp_echo_server.cpp
